<resources>
    <string name="app_name">Character Creator</string>
    <string name="arrow_next">Arrow next</string>
    <string name="dress_your_character">Dress your character</string>
    <string name="customize_your_character">Customize your character</string>
    <string name="set_staticonnextpressed_first">Set staticOnNextPressed first</string>

    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="reset">Reset</string>
    <string name="white">White</string>
    <string name="random">Random</string>
    <string name="shoes">Shoes</string>
    <string name="no_shoes">No shoes</string>
    <string name="shortsleeve">Shortsleeve</string>
    <string name="no_shortsleeve">No shortsleeve</string>
    <string name="longsleeve">Longsleeve</string>
    <string name="no_longsleeve">No longsleeve</string>
    <string name="pants">Pants</string>
    <string name="no_pants">No pants</string>
    <string name="hair">Hair</string>
    <string name="no_hair">No hair</string>
    <string name="skin">Skin</string>
    <string name="base2">Base</string>
    <string name="no_unknown">No ?</string>

    <string name="black">Black</string>
    <string name="curtain_black">Curtain black</string>
    <string name="curtain_blonde">Curtain blonde</string>
    <string name="curtain_brown">Curtain brown</string>
    <string name="curly_long_black">Curly long black</string>
    <string name="curly_long_blonde">Curly long blonde</string>
    <string name="curly_long_brown">Curly long brown</string>
    <string name="high_and_tight_black">High and tight black</string>
    <string name="high_and_tight_blonde">High and tight blonde</string>
    <string name="high_and_tight_brown">High and tight brown</string>
    <string name="long_messy_black">Long messy black</string>
    <string name="long_messy_blonde">Long messy blonde</string>
    <string name="long_messy_brown">Long messy brown</string>
    <string name="loose_black">Loose black</string>
    <string name="loose_blonde">Loose blonde</string>
    <string name="loose_brown">Loose brown</string>
    <string name="natural_black">Natural black</string>
    <string name="natural_blonde">Natural blonde</string>
    <string name="natural_brown">Natural brown</string>
    <string name="brown">Brown</string>
    <string name="forest">Forest</string>
    <string name="lavender">Lavender</string>
    <string name="sky">Sky</string>
    <string name="blue_gray">Blue gray</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="slate">Slate</string>
    <string name="tan">Tan</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>