<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3EEDD"
    tools:context="pl.jawegiel.charactercreator.activities.ActivityCharacterCreator">

    <pl.jawegiel.charactercreator.views.BgView
        android:id="@+id/character_creator_bg_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:paddingBottom="20dp"
        android:text="@string/customize_your_character"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="switch"
        android:labelFor="@id/sw_sex"
        android:textOff="@string/man"
        android:textOn="@string/woman"
        android:thumb="@drawable/pink_out_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_title"
        app:showText="true"
        app:track="@drawable/custom_track" />

    <Button
        android:id="@+id/b_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_sex"
        tools:ignore="ButtonStyle" />


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_reset">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_element_skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/white" />

            <LinearLayout
                android:id="@+id/ll_skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_element_skin"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_previous_skin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:enabled="false"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:text="@string/previous"
                    tools:ignore="ButtonStyle" />

                <TextView

                    android:id="@+id/tv_element_skin_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/skin"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_next_skin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/next"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <TextView

                android:id="@+id/tv_element_hair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_skin"
                android:layout_centerHorizontal="true"
                android:text="@string/no_hair" />

            <LinearLayout
                android:id="@+id/ll_hair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_element_hair"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_previous_hair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:enabled="false"
                    android:padding="10dp"
                    android:text="@string/previous"
                    tools:ignore="ButtonStyle" />

                <TextView

                    android:id="@+id/tv_element_hair_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/hair"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_next_hair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/next"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <TextView

                android:id="@+id/tv_element_pants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_hair"
                android:layout_centerHorizontal="true"
                android:text="@string/no_pants" />

            <LinearLayout
                android:id="@+id/ll_pants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_element_pants"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_previous_pants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/previous"
                    tools:ignore="ButtonStyle" />

                <TextView

                    android:id="@+id/tv_element_pants_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/pants"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_next_pants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/next"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <TextView

                android:id="@+id/tv_element_longsleeve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_pants"
                android:layout_centerHorizontal="true"
                android:text="@string/no_longsleeve" />

            <LinearLayout
                android:id="@+id/ll_longsleeve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_element_longsleeve"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_previous_longsleeve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/previous"
                    tools:ignore="ButtonStyle" />

                <TextView

                    android:id="@+id/tv_element_longsleeve_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/longsleeve"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_next_longsleeve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:background="@drawable/button"
                    android:padding="10dp"
                    android:text="@string/next"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>


            <TextView

                android:id="@+id/tv_element_shortsleeve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_longsleeve"
                android:layout_centerHorizontal="true"
                android:text="@string/no_shortsleeve" />

            <LinearLayout
                android:id="@+id/ll_shortsleeve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_element_shortsleeve"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_previous_shortsleeve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/previous"
                    tools:ignore="ButtonStyle" />

                <TextView

                    android:id="@+id/tv_element_shortsleeve_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/shortsleeve"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_next_shortsleeve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/next"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>


            <TextView

                android:id="@+id/tv_element_shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_shortsleeve"
                android:layout_centerHorizontal="true"
                android:text="@string/no_shoes" />

            <LinearLayout
                android:id="@+id/ll_shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_element_shoes"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_previous_shoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:text="@string/previous"
                    tools:ignore="ButtonStyle" />

                <TextView

                    android:id="@+id/tv_element_shoes_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/shoes"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_next_shoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:text="@string/next"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_randomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollview"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:text="@string/random"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview"
        tools:ignore="ButtonStyle" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_randomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/dices"
        android:padding="10dp"
        android:text="@string/random"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_randomize"
        tools:ignore="ButtonStyle" />


    <pl.jawegiel.charactercreator.views.CharacterCreatorView
        android:id="@+id/character_creator_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/iv_arrows_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/arrows_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:cornerRadius="28dp"
        app:icon="@drawable/back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="38dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="test"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>